# flag-frenzy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  append-config.sh
.github/workflows/: ci.yml
config/: bevy.toml  bevy_asset.toml  bevy_internal.toml  bevy_pbr.toml  bevy_winit.toml  demo.toml  global.toml
docs/: 1-install.md  2-cli.md  3-config.md  4-rules.md  README.md
examples/complex/: Cargo.toml
examples/complex/config/: complex.toml
examples/empty/: Cargo.toml
examples/simple/: Cargo.toml
src/: ansi.rs  chunk.rs  cli.rs  intern.rs  main.rs  runner.rs  tests.rs
src/combos/: combos.rs  features.rs  mod.rs  ncr.rs
src/config/: config.rs  loader.rs  mod.rs  rule.rs  schema.rs  storage.rs
src/features/: combos.rs
src/manifest/: loader.rs  mod.rs  schema.rs
src/metadata/: loader.rs  mod.rs  schema.rs
tests/complex/config/: complex.toml
tests/complex/src/: lib.rs
tests/dependencies/: Cargo.toml
tests/optional-dependencies/: Cargo.toml
tests/optional-dependencies/config/: optional-dependencies.toml
