[package]
name = "flag-frenzy"
edition = "2021"
publish = false

[dependencies]
# CLI argument parsing.
argh = "0.1.12"

# General deserialization.
serde = { version = "1.0.203", features = ["derive"] }

# Configuration file format.
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

# `cargo-metadata` output format.
serde_json = "1.0.120"

# Feature (string) internment.
slotmap = "1.0.7"

# Custom errors.
thiserror = "1.0.62"

# Error propagation and contexts.
anyhow = "1.0.86"
