[package]
name = "flag-frenzy"
authors = ["BD103"]
edition = "2021"
description = "Checks combinations of Cargo feature flags for a workspace."
repository = "https://github.com/TheBevyFlock/flag-frenzy"
license = "MIT OR Apache-2.0"
publish = false
autoexamples = false

[dependencies]
# CLI argument parsing.
argh = "0.1.12"

# General deserialization.
serde = { version = "1.0.203", features = ["derive"] }

# Configuration file format.
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

# `cargo-metadata` output format.
serde_json = "1.0.120"

# Custom errors.
thiserror = "1.0.62"

# Error propagation and contexts.
anyhow = "1.0.86"
